--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Gaurav</h1>
-									<p>I am a student of <strong>IIT Jodhpur</strong> and this is my first webpage. It's fully responsive, built on HTML5 and CSS3. Hope you like it :)</p>
+									<p>I am a student at <strong>IIT Jodhpur</strong> and this is my first webpage. It's fully responsive, built on HTML5 and CSS3. Hope you like it :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
