--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">Friends Forever...</h2>
+									<p>These friends that i have got here are the best one could have and a special mention for the photographer of our group<strong> Ayaz Aslam</strong> for taking this picture. We all together are known as <strong>USAG</strong>. We have a company known as <strong> OXYRICH</strong>.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic002.jpg" alt="" />
