--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Friends Forever...</h2>
+                                                                                                                                                                                       <h4>"Best Friends make good times better and hard times easier"<br><br></h4>
+
 									<p>These friends that i have got here are the best one could have and a special mention for the photographer of our group<strong> Ayaz Aslam</strong> for taking this picture. We all together are known as <strong>USAG</strong>. We have a company known as <strong> OXYRICH</strong>.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
@@ -50,8 +52,8 @@
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Amet lorem</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">OXYRICH</h2>
+									<p>We do not do any work as such of now. But we have created a small app <strong>Hit Me</strong>. If you have any projects, you surely could contact us. </p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
@@ -72,7 +74,7 @@
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/1.jpg" alt="">
 								</div>
 							</section>
 
@@ -103,7 +105,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p><h3>Phone No. :-</h3><h4> 7869157486</h4><br><h3>Address :- </h3> <h4> B1 Boys Hostel, IIT Jodhpur.</h4></p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
@@ -127,11 +129,11 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon fa-twitter"><a href="#">@untitled-tld</a></li>
-											<li class="icon fa-facebook"><a href="#">facebook.com/untitled</a></li>
-											<li class="icon fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
-											<li class="icon fa-instagram"><a href="#">@untitled-tld</a></li>
-											<li class="icon fa-medium"><a href="#">medium.com/untitled</a></li>
+											<li class="icon fa-twitter"><a href="https://twitter.com/gouravarya1802">@gouravarya1802</a></li>
+											<li class="icon fa-facebook"><a href="https://www.facebook.com/gourav.arya.501">facebook.com/gaurav</a></li>
+											
+											<li class="icon fa-instagram"><a href="https://www.instagram.com/_gaurav_1802/?hl=en">@_gaurav_1802</a></li>
+											<li class="icon fa-medium"><a href="https://mail.google.com/mail/u/0/#inbox">arya.2@iitj.ac.in</a></li>
 										</ul>
 									</div>
 								</div>
