--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 											<li class="icon fa-facebook"><a href="https://www.facebook.com/gourav.arya.501">facebook.com/gaurav</a></li>
 											
 											<li class="icon fa-instagram"><a href="https://www.instagram.com/_gaurav_1802/?hl=en">@_gaurav_1802</a></li>
-											<li class="icon fa-medium"><a href="https://mail.google.com/mail/u/0/#inbox">arya.2@iitj.ac.in</a></li>
+											<li class="icon fa-medium"><a href="https://mail.google.com/mail/u/0/#inbox?compose=new">arya.2@iitj.ac.in</a></li>
 										</ul>
 									</div>
 								</div>
