--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+									<h2 class="major">About Me..</h2>
+									<p>I am a shy kind of guy. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/1.jpg" alt="">
@@ -133,7 +133,7 @@
 											<li class="icon fa-facebook"><a href="https://www.facebook.com/gourav.arya.501">facebook.com/gaurav</a></li>
 											
 											<li class="icon fa-instagram"><a href="https://www.instagram.com/_gaurav_1802/?hl=en">@_gaurav_1802</a></li>
-											<li class="icon fa-medium"><a href="https://mail.google.com/mail/u/0/#inbox?compose=1627e526bee89f3f">arya.2@iitj.ac.in</a></li>
+											<li class="icon fa-medium"><a href="https://mail.google.com/mail/u/0/#inbox?compose=new">arya.2@iitj.ac.in</a></li>
 										</ul>
 									</div>
 								</div>
