--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									</div>
 									<a href="images/gallery/fulls/001.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/001.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/fulls/005.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/005.JPG" alt="" /></a>
+										<a href="images/gallery/fulls/005.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/005.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/006.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/006.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/007.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/007.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/009.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/009.jpg" alt="" /></a>
