--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">OXYRICH</h2>
-									<p>We do not do any work as such of now. But we have created a small app <strong>Hit Me</strong>. If you have any projects, you surely could contact us. </p>
+									<p>We do not do any work as such of now. But we have created a small app <a href="https://drive.google.com/open?id=1EzgDCAkjAb8DJoO8KYN7D8hiJMe08Mj-"><strong>Hit Me</strong></a>. If you have any projects, you surely could contact us. </p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
